# sysmon-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: DESIGN.md
src/: main.rs  metrics.rs  notifications.rs
