[package]
name = "sysmon-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.3.0"
crossbeam = "0.8.3"
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

[features]
collect-cpu-usage = ["crossbeam"]
collect-memory-usage = []
send-email-notifications = ["lazy_static"]